Fixed product page and visible content unclosed section tag

--- a/css/layout.less
+++ b/css/layout.less
@@ -6406,6 +6406,9 @@ margin: 10px 0 20px;
 		float: left;
 		width: 50%;
 		text-align: center;
+		img{
+			width:90%;
+		}
 	}
 	.info-half{
 		float: left;
