--- a/css/responsive.less
+++ b/css/responsive.less
@@ -12,6 +12,9 @@
 }
 
 @media screen and (min-width:960px) and (max-width:1188px) {
+	/*#content .container {
+		background: yelow;
+	}*/
 	.intrest-box{
 		margin-right: 18px;
 	}
@@ -209,9 +212,9 @@
 
 @media screen and (min-width:750px) and (max-width:959px) {
 
-	#content .container {
+	/*#content .container {
 		background: orange;
-	}
+	}*/
 	.mainContent .filterMain select{
 		margin:0 20px 0 0;
 	}
@@ -497,10 +500,7 @@
 			margin: 0px 0 20px;
 		}
 	}
-	.block_270 {
-		width: 100%;
-		float: left;
-	}
+	 
 	.block.paddingTB_20{
 		padding-top: 10px;
 		padding-bottom: 10px;
@@ -512,10 +512,6 @@
 				width: 100%;
 			}
 		}
-	}
-	.block_590.border_b{
-		width: 100% !important;
-		float: none !important;
 	}
 	.product-page .rightWing h3 {
 		margin-top: -5px;
@@ -934,23 +930,40 @@
 	.blogSection .blogWrap .rightWing {
 		width: 100%;
 	}
-	.activity_pad {
-		width: 30% !important;
-		float: left !important;
-		margin: 0 10px 20px;
-	}
 	.facebook-comment{
 		.fb_iframe_widget span{
 					width: 640px !important;
 			}
+	}
+	.activity_pad {
+		width: 100%;
 	}
 	
 
 }/*786 ends*/
 
 @media screen and (min-width:500px) and (max-width:749px) {
-	#content .container {
+	/*#content .container {
 		background: pink;
+	}*/
+	.activity_pad {
+		padding: 20px;
+		.item_img2 {
+			width: 50%;
+			height: auto;
+		}
+
+		.item_img3 {
+			width: 50%;
+			margin-right: 20px;
+			height: auto;
+		}
+	}
+	.block_590 {
+		width: 100%;
+	}
+	.block_270 {
+		width: 100%;
 	}
 	.mainContent {
 		width: 100%;
@@ -1302,12 +1315,63 @@
 
 
 @media screen and (min-width:100px) and (max-width:499px) {
-	#content .container{
+	/*#content .container{
 		background: red;
-	}
+	}*/
+	.activity_pad {
+		padding: 20px;
+		.item_img2 {
+			width: 100%;
+			height: auto;
+			margin: 0 0 20px;
+		}
 
+		.item_img3 {
+			width: 100%;
+			margin: 0 0 20px;
+			height: auto;
+		}
+	}
+	.block_130 {
+		width: 100%;
+		.user_img1 {
+			width: 48px;
+			height: 48px;
+			margin:0 0 8px;
+			float: left;
+		}
+		.block_80{
+			float: none;
+			width: auto;
+			margin-left: 60px;
+		}
+	}
+	.block_590 {
+		width: 100%;
+	}
+	.block_270 {
+		width: 100%;
+	}
+	.block_490{
+		width: 100%;
+	}
+	.user_img2{
+		margin-bottom: 15px;
+	}
+	.float_right.block_110{
+		float: left;
+	}
+	.block.paddingTB_20{
+		padding-top: 0;
+	}
+	#comment_amount {
+		margin-bottom: 20px;
+	}
 	.blogslide-pane{
 		display: none;
+	}
+	.wrapper_1 {
+		padding: 0 0 20px;
 	}
 	.mainContent {
 		width: 100%;
